2011-06-10  Thien-Thi Nguyen  <ttn@ambire>

	[int] Use ‘off_t’ for ‘behavior.mem_limit’.

	Incidentally, this eliminates a "comparison between signed
	and unsigned integer expressions" warning from GCC 4.4.

	* base.h (struct behavior): Change type of ‘mem_limit’ to ‘off_t’.
	* b-fro.c (fro_open): Delete cast to ‘off_t’.

2011-02-01  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[grok] Fix bug: Make sure error message accumulates cleanly.

	Omission from 2010-05-24, "Rewrite parsing".

	* b-grok.c: #include <stdarg.h>.
	(ignoble): Take args FMT and varargs; discard work-in-progress
	cruft on ‘g->systolic’; do accumulate string here, not ...
	(BUMMER): ...here; update call to ‘ignoble’.

2011-01-31  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Include <stdarg.h> for ‘va_start’ et al.

	* b-divvy.c: #include <stdarg.h>.
	* b-fb.c: Likewise.

2011-01-23  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Fix bug: Use "three manifestations" for ‘!DIFF3_BIN’.

	Reported by Nelson H. F. Beebe.
	Regression introduced 2010-09-30, "Use ‘struct symdef’
	array as "three manifestations" ‘merge’ arg".

	* merger.c (merge) [!DIFF3_BIN]: Use ‘LABEL’, not ‘label’.

2011-01-22  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Release: 5.7.97

2011-01-22  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[dtp] Fix bug: Handle ISO week+day dates.

	* maketime.c (ISO_day_of_week): New static func.
	(tm2time): Take additional arg YWEEK; if specified,
	compute yday, and maybe year, for later ‘yday’ processing.
	(maketime): Update call to ‘tm2time’.
	* maketime.h (tm2time): Update func decl.
	* rcstime.c (date2str): Update call to ‘tm2time’.

2011-01-22  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[dtp] Fix bug: Encode weekday number (letter ‘X’) with modulo.

	* partime.c (parse_pattern_letter <X>): Use modulo to encode value.

2011-01-14  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Decruft: Remove "yet another redolently redundant RCS rap".

	* Makefile.am (EXTRA_DIST): Remove yarrrr.c.
	(YALL, YPROGS): Delete vars.